# rapproximate

./: .gitignore  Cargo.toml  README.md  test.txt
src/: cli.rs  graph.rs  main.rs  parser.rs  solution.rs
src/extensionsemantics/: CategorizedBasedApproximateSolver.rs  SimpleGroundedSemanticsSolver.rs  SimpleGroundedSemanticsSolver2.rs  inout.rs  mod.rs
src/gradualsemantics/: card_based.rs  categorizer.rs  counting.rs  eigen.rs  max_based.rs  mod.rs  no_self_att_hcat.rs  perso.rs
