[package]
name = "rapproximate_hcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'
