[package]
name = "rapproximate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.32"
memmap2 = "0.9.4"
memchr = "2.7.2"

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'

[lints.rust]
non_snake_case = "allow"
dead_code = "allow"

[lints.clippy]
non_snake_case = "allow"
dead_code = "allow"